<resources>
    <string name="app_name">WeatherApp</string>

    <string name="button_see_details">Detayları gör</string>
    <string name="desc_button_back">Geri</string>
    <string name="desc_image_weather">Hava durumu görseli</string>
    <string name="text_morning_title">Gündüz</string>
    <string name="text_evening_title">Akşam</string>
    <string name="text_night_title">Gece</string>
    <string name="text_humidity_title">Nem Oranı (%)</string>
    <string name="desc_image_loading">Yükleniyor görseli</string>
    <string name="text_loading">Yükleniyor</string>
</resources>