<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingHorizontal="24dp"
    android:paddingVertical="36dp"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/image_loading"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_01d"
        android:contentDescription="@string/desc_image_loading"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_loading"
        android:textSize="22sp"
        android:textColor="@color/white"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/image_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layoutDescription="@xml/fragment_home_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_current_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"

            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="İstanbul" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:includeFontPadding="false"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_city_name"
                tools:text="11.10.2021" />

            <ImageView
                android:id="@+id/image_weather"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:contentDescription="@string/desc_image_weather"
                tools:src="@drawable/img_01d"
                android:transitionName="weatherImage"

                app:layout_constraintTop_toBottomOf="@id/text_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/text_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="64sp"
                tools:text="24°C"

                app:layout_constraintBottom_toTopOf="@id/text_weather_description"
                app:layout_constraintTop_toBottomOf="@id/image_weather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/text_weather_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="20sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_temperature"
                tools:text="Parçalı Bulutlu" />

            <Button
                android:id="@+id/button_see_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/button_see_details"
                android:textColor="@color/white"
                android:textSize="16sp"
                style="@style/AppOutlinedButton"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_weather_description"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_next_days"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintTop_toBottomOf="@id/layout_current_weather"
            tools:listitem="@layout/item_weather">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.constraintlayout.widget.ConstraintLayout>